--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
+h1{
+  color: #ffffff;
+  background-color: gray;
+  text-align: center;
+  padding: 8px;
+}
+h2{
+  color: #ffffff;
+  /* background-color: aquamarine; */
+  text-align: center;
+  
+}
+p{
+  color: #ffffff;
+  /* background-color: aqua; */
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div{
+  background-color: #03203C;
+  height: 100vh;
 }
+button{
+  padding: 8px 16px;
+  border-radius: 5px;
+  font-size: 16px;
+  background-color: coral;
+  color: #ffffff;
+  margin-left: 10px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
